# SimpleFTL

./: CMakeLists.txt  Readme.md  main.cpp
config/: config.ini
src/: cache.h  config.cpp  config.h  device.cpp  device.h  flash.cpp  flash.h  ftl.cpp  ftl.h  mapping_table.h  pubdef.h
